<resources>
    <string name="app_name">MandK</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coffee_name01">그린 티 바나나 블랜디드</string>
    <string name="coffee_price01">5000</string>
    <string name="coffee_img01">blended_banana</string>
    <string name="coffee_name02">망고 블렌디드</string>
    <string name="coffee_img02">blended_mango</string>
    <string name="coffee_price02">5100</string>
    <string name="coffee_name03">한라봉 그린티 셔벗</string>
    <string name="coffee_price03">5200</string>
    <string name="coffee_img03">blended_orange</string>
    <string name="coffee_name04">딸기 요거트 블렌디드</string>
    <string name="coffee_price04">5300</string>
    <string name="coffee_img04">blended_strawberry</string>
    <string name="coffee_name05">에스프레소 프라푸치노</string>
    <string name="coffee_price05">5400</string>
    <string name="coffee_img05">pappuccino_espresso</string>
    <string name="coffee_name06">자바칩 프라푸 치노</string>
    <string name="coffee_price06">5500</string>
    <string name="coffee_img06">pappuccino_javachip</string>
    <string name="coffee_name07">모카 프루푸치노</string>
    <string name="coffee_price07">5600</string>
    <string name="coffee_img07">pappuccino_moka</string>
    <string name="coffee_name08">토피 넛 프라푸치노</string>
    <string name="coffee_price08">5700</string>
    <string name="coffee_img08">pappuccino_toffee</string>
    <string name="coffee_name09">콜드 브루</string>
    <string name="coffee_price09">5800</string>
    <string name="coffee_img09">coldbrew</string>
    <string name="coffee_name10">콜드 브루 라떼</string>
    <string name="coffee_price10">5900</string>
    <string name="coffee_img10">coldbrew_latte</string>
    <string name="coffee_name11">나이트로 콜드 브루</string>
    <string name="coffee_price11">6000</string>
    <string name="coffee_img11">coldbrew_nitro</string>
    <string name="coffee_name12">바닐라 크림 콜드 브루</string>
    <string name="coffee_price12">6100</string>
    <string name="coffee_img12">coldbrew_vanillacream</string>
    <string name="coffee_name13">아이스 베리 트윙클 모카</string>
    <string name="coffee_price13">6200</string>
    <string name="coffee_img13">espresso_ice</string>
    <string name="coffee_name14">아이스 토피 넛 라떼</string>
    <string name="coffee_price14">6300</string>
    <string name="coffee_img14">espresso_icetoffee</string>
    <string name="coffee_name15">토피 넛 크런치 라떼</string>
    <string name="coffee_price15">6400</string>
    <string name="coffee_img15">espresso_toffelatte</string>
    <string name="coffee_name16">아이스 베리 트윙클 모카</string>
    <string name="coffee_price16">6500</string>
    <string name="coffee_img16">espresso_very</string>
    <string name="coffee_name17">아이스 조이풀 메들리 티</string>
    <string name="coffee_price17">6600</string>
    <string name="coffee_img17">tea_icejoyful</string>
    <string name="coffee_name18">아이스 오렌지 티 라떼</string>
    <string name="coffee_price18">6700</string>
    <string name="coffee_img18">tea_iceorange</string>
    <string name="coffee_name19">조이풀 메들리 티</string>
    <string name="coffee_price19">6800</string>
    <string name="coffee_img19">tea_joyful</string>
    <string name="coffee_name20">발렌시아 오렌지티 라떼</string>
    <string name="coffee_price20">6900</string>
    <string name="coffee_img20">tea_orange</string>
    <string name="dessert_name01">가나 슈크림 케이크</string>
    <string name="dessert_price01">5000</string>
    <string name="dessert_img01">ganashoe</string>
    <string name="dessert_name02">마블 드림 치즈 케이크</string>
    <string name="dessert_price02">5100</string>
    <string name="dessert_img02">dream</string>
    <string name="dessert_name03">스노우 카라멜 케이크</string>
    <string name="dessert_price03">5200</string>
    <string name="dessert_img03">caramel</string>
    <string name="dessert_name04">체리 그린 생크림 케이크</string>
    <string name="dessert_price04">5300</string>
    <string name="dessert_img04">cherry</string>
    <string name="dessert_name05">다크 초콜릿 칩 머핀</string>
    <string name="dessert_price05">5400</string>
    <string name="dessert_img05">dart</string>
    <string name="dessert_name06">마롱 크림 브리오 슈</string>
    <string name="dessert_price06">5500</string>
    <string name="dessert_img06">marong</string>
    <string name="dessert_name07">상큼한 블루베리 머핀</string>
    <string name="dessert_price07">5600</string>
    <string name="dessert_img07">sangkem</string>
    <string name="dessert_name08">윈터 모카 브리오 슈</string>
    <string name="dessert_price08">5700</string>
    <string name="dessert_img08">winter</string>
    <string name="dessert_name09">과일 리코타 샐러드</string>
    <string name="dessert_price09">5800</string>
    <string name="dessert_img09">recota</string>
    <string name="dessert_name10">B.E.L.T 샌드위치</string>
    <string name="dessert_price10">5900</string>
    <string name="dessert_img10">belt</string>
    <string name="dessert_name11">콥,요거트 샐러드</string>
    <string name="dessert_price11">6000</string>
    <string name="dessert_img11">yogurt</string>
    <string name="dessert_name12">프렌치 어니언 샌드위치</string>
    <string name="dessert_price12">6100</string>
    <string name="dessert_img12">french</string>
    <string name="dessert_name13">넛츠 바닐라 아이스크림</string>
    <string name="dessert_price13">6200</string>
    <string name="dessert_img13">nutsbanila_ice</string>
    <string name="dessert_name14">넛츠 초콜릿 아이스크림</string>
    <string name="dessert_price14">6300</string>
    <string name="dessert_img14">nuts_choco</string>
    <string name="dessert_name15">바닐라 아이스크림</string>
    <string name="dessert_price15">6400</string>
    <string name="dessert_img15">banila_ice</string>
    <string name="dessert_name16">초콜릿 아이스크림</string>
    <string name="dessert_price16">6500</string>
    <string name="dessert_img16">choco_ice</string>
    <string name="product_name01">레드 더블월 머그</string>
    <string name="product_price01">5000</string>
    <string name="product_img01">red_cup</string>
    <string name="product_name02">블루 머그</string>
    <string name="product_price02">5100</string>
    <string name="product_img02">blue_cup</string>
    <string name="product_name03">사이렌 머그</string>
    <string name="product_price03">5200</string>
    <string name="product_img03">siren</string>
    <string name="product_name04">커피 체리 더블월 머그</string>
    <string name="product_price04">5300</string>
    <string name="product_img04">cherry_double</string>
    <string name="product_name05">헤리티지 핸들 머그</string>
    <string name="product_price05">5400</string>
    <string name="product_img05">heritage</string>
    <string name="product_name06">스노우맨 글라스</string>
    <string name="product_price06">5500</string>
    <string name="product_img06">snowman</string>
    <string name="product_name07">싱글월 글라스</string>
    <string name="product_price07">5600</string>
    <string name="product_img07">singlewall</string>
    <string name="product_name08">티바나 글라스</string>
    <string name="product_price08">5700</string>
    <string name="product_img08">tibana</string>
    <string name="product_name09">강릉 시티 텀블러</string>
    <string name="product_price09">5800</string>
    <string name="product_img09">gangleung</string>
    <string name="product_name10">리얼 경주 텀블러</string>
    <string name="product_price10">5900</string>
    <string name="product_img10">gyungju</string>
    <string name="product_name11">뱃지 텀블러</string>
    <string name="product_price11">6000</string>
    <string name="product_img11">badge</string>
    <string name="product_name12">수퍼 그래픽 텀블러</string>
    <string name="product_price12">6100</string>
    <string name="product_img12">graphic</string>
</resources>
